--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>cn.milo.udptest</groupId>
-  <artifactId>udptest</artifactId>
+  <artifactId>udptest1</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
