--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>cn.milo.udptest</groupId>
-  <artifactId>udptest</artifactId>
+  <groupId>cn.milo.tcptest</groupId>
+  <artifactId>tcptest</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>udptest</name>
+  <name>tcptest</name>
   <url>http://maven.apache.org</url>
 
   <properties>
